fix: text even clearer on mobile

--- a/css/winners.css
+++ b/css/winners.css
@@ -34,7 +34,7 @@ body {
 
 @media screen and (max-width: 769px) {
     .container {
-        background: rgba(0,0,0,0.5);
+        background: rgba(0,0,0,0.3);
     }
 }
 
